# ATAPS

./: .gitignore  README.md  go.mod  go.work.sum  main.go
.github/: pull_request_template.md
.github/workflows/: deploy_staging.yml  publish.yml  test.yml
adqlparserpy/: README.md  pyproject.toml
adqlparserpy/src/grpc_server/: adqlparser_pb2.py  adqlparser_pb2.pyi  adqlparser_pb2_grpc.py  adqlparser_server.py
adqlparserpy/src/grpc_server/protos/: adqlparser.proto
adqlparserpy/tests/: test_adqlparser.py
ci/: dagger.json
ci/dagger/: go.mod  main.go
pkg/adqlparser/: adqlparser.go
tapservicego/: dagger.json  docker-compose.yml  go.mod  go.sum  main.go  test.http
tapservicego/.github/workflows/: test.yml
tapservicego/cmd/tapservice/: main.go
tapservicego/dagger/: aws.go  build.go  deploy.go  go.mod  go.sum  main.go  test.go
tapservicego/deployments/tapservice/: Chart.yaml  values.yaml
tapservicego/internal/parsers/: csvparser.go  csvparser_test.go  fitsparser.go  fitsparser_test.go  htmlparser.go  htmlparser_test.go  textparser.go  textparser_test.go  votableparser.go  votableparser_test.go
tapservicego/internal/sqlparser/: csvparser.go  csvparser_test.go  fitsparser.go  fitsparser_test.go  votableparser.go  votableparser_test.go
tapservicego/internal/tapsync/: alerce_suite_test.go  alercecsv_test.go  alercefits_test.go  alercehtml_test.go  alercetext_test.go  alercevotable_test.go  config.go  errorresponse.go  psqlrepository.go  psqlrepository_test.go  tapsync.go  tapsync_suite_test.go  tapsync_test.go  test_utils.go  utils_test.go
(+23 files in other folders)
